# xsde-cmake

./: CMakeLists.txt
cmake/: XsdeConfig.cmake.in
libxsde/xsde/: CMakeLists.txt
